I've created the stories

--- a/home.html
+++ b/home.html
@@ -32,20 +32,60 @@
 
     <main>
         <div class="container">
-            <!-- ------------STORIES------------ -->
+            <!-- ------------LEFT COLUMN------------ -->
             <div class="left-column">
+                <!-- ------------STORIES------------ -->
                 <div class="stories">
-                    <div class="story">
-                        <img src="" alt="">
-                        <div class="userName_story"></div>
-                    </div>
-                    <div class="story">
-                        <img src="" alt="">
-                        <div class="userName_story"></div>
-                    </div>
-                    <div class="story">
-                        <img src="" alt="">
-                        <div class="userName_story"></div>
+                    <div class="stories_slider">
+                        <div class="story">
+                            <div class="bg-img">
+                                <img src="./media/imgs/avatar1.png" alt="">
+                            </div>
+                            <div class="userName_story">9gag sdaljkasdk aslsds</div>
+                        </div>
+                        <div class="story">
+                            <div class="bg-img">
+                                <img src="./media/imgs/avatar2.png" alt="">
+                            </div>
+                            <div class="userName_story">meowe</div>
+                        </div>
+                        <div class="story">
+                            <div class="bg-img">
+                                <img src="./media/imgs/avatar3.png" alt="">
+                            </div>
+                            <div class="userName_story">barked</div>
+                        </div>
+                        <div class="story">
+                            <div class="bg-img">
+                                <img src="./media/imgs/avatar4.png" alt="">
+                            </div>
+                            <div class="userName_story">nathanwpyle</div>
+                        </div>
+                        <div class="story">
+                            <div class="bg-img">
+                                <img src="./media/imgs/avatar5.png" alt="">
+                            </div>
+                            <div class="userName_story">wawawiwac</div>
+                        </div>
+                        <div class="story">
+                            <div class="bg-img">
+                                <img src="./media/imgs/avatar6.png" alt="">
+                            </div>
+                            <div class="userName_story">respondeai</div>
+                        </div>
+                        <div class="story">
+                            <div class="bg-img">
+                                <img src="./media/imgs/avatar7.png" alt="">
+                            </div>
+                            <div class="userName_story">filomoderna</div>
+                        </div>
+                        <div class="story">
+                            <div class="bg-img">
+                                <img src="./media/imgs/avatar8.png" alt="">
+                            </div>
+                            <div class="userName_story">memeriago</div>
+                        </div>
+                        
                     </div>
                 </div>
 
@@ -82,6 +122,7 @@
                 </div>
             </div>
 
+            <!-- ------------RIGHT COLUMN------------ -->
             <div class="right-column">
 
             </div>
