--- a/home.html
+++ b/home.html
@@ -87,6 +87,9 @@
                         </div>
 
                     </div>
+                    <div class="button-right">
+                        <ion-icon name="chevron-forward-circle-outline"></ion-icon>
+                    </div>
                 </div>
 
                 <!-- --------------FEED-------------- -->
@@ -124,10 +127,10 @@
             <!-- ------------RIGHT COLUMN------------ -->
             <div class="right-column">
                 <div class="owner-profile">
-                    <img src="" alt="">
+                    <img src="./media/imgs/perfil.png" alt="">
 
                     <div class="desc-profile">
-                        <span>catanacomics</span> <br>
+                        <span>catanacomics</span>
                         Catana
                     </div>
                 </div>
@@ -139,11 +142,51 @@
                     </div>
 
                     <div class="suggestion-profile">
-                        <img src="" alt="">
+                        <img src="./media/imgs/lateral1.png" alt="">
                         <div>
                             <div class="desc-profile">
-                                <h1>fashionpluss40</h1>
-                                <p>Novo no Instagram</p>
+                                <span>bad.vibes.memes</span>
+                                Segue você
+                            </div>
+                            <a href="">Seguir</a>
+                        </div>
+                    </div>
+                    <div class="suggestion-profile">
+                        <img src="./media/imgs/lateral2.png" alt="">
+                        <div>
+                            <div class="desc-profile">
+                                <span>chibirdart</span>
+                                Segue você
+                            </div>
+                            <a href="">Seguir</a>
+                        </div>
+                    </div>
+                    <div class="suggestion-profile">
+                        <img src="./media/imgs/lateral3.png" alt="">
+                        <div>
+                            <div class="desc-profile">
+                                <span>razoesparaacreditar</span>
+                                Segue você
+                            </div>
+                            <a href="">Seguir</a>
+                        </div>
+                    </div>
+                    <div class="suggestion-profile">
+                        <img src="./media/imgs/lateral4.png" alt="">
+                        <div>
+                            <div class="desc-profile">
+                                <span>adorable_animals</span>
+                                Segue você
+                            </div>
+                            <a href="">Seguir</a>
+                        </div>
+                    </div>
+                    <div class="suggestion-profile">
+                        <img src="./media/imgs/lateral5.png" alt="">
+                        <div>
+                            <div class="desc-profile">
+                                <span>smallcutecats</span>
+                                Segue você
                             </div>
                             <a href="">Seguir</a>
                         </div>
