--- a/home.html
+++ b/home.html
@@ -43,8 +43,8 @@
 
     <main>
         <div class="container">
-            <!-- ------------LEFT COLUMN------------ -->
-            <div class="left-column">
+            <!-- ------------MAIN CONTENT----------- -->
+            <div class="main-content">
                 <!-- ------------STORIES------------ -->
                 <div class="stories">
                     <div class="stories_slider">
@@ -172,8 +172,8 @@
                 </div>
             </div>
 
-            <!-- ------------RIGHT COLUMN------------ -->
-            <div class="right-column">
+            <!-- ------------SIDEBAR------------ -->
+            <div class="sidebar">
                 <div class="owner-profile">
                     <img src="./media/imgs/perfil.png" alt="">
 
@@ -251,7 +251,24 @@
                     </div>
                 </div>
             </div>
+        </div>
 
+        <div class="bottom-bar mobile-only">
+            <a href="">
+                <ion-icon name="home"></ion-icon>
+            </a>
+            <a href="">
+                <ion-icon name="search"></ion-icon>
+            </a>
+            <a href="">
+                <ion-icon name="add-circle-outline"></ion-icon>
+            </a>
+            <a href="">
+                <ion-icon name="heart-outline"></ion-icon>
+            </a>
+            <a href="">
+                <ion-icon name="person-outline"></ion-icon>
+            </a>
         </div>
     </main>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
