Desafio - Video - Realizado

--- a/home.html
+++ b/home.html
@@ -60,9 +60,9 @@
                         <div class="story">
                             <a href="">
                                 <div class="bg-img">
-                                    <img src="./media/imgs/avatar1.png" alt="">
+                                    <img src="./media/imgs/avatar0.png" alt="">
                                 </div>
-                                <div class="userName_story">9gag sdaljkasdk aslsds</div>
+                                <div class="userName_story">Mike</div>
                             </a>
                         </div>
                         <div class="story">
@@ -70,7 +70,7 @@
                                 <div class="bg-img">
                                     <img src="./media/imgs/avatar2.png" alt="">
                                 </div>
-                                <div class="userName_story">meowe</div>
+                                <div class="userName_story">dona_Benta</div>
                             </a>
                         </div>
                         <div class="story">
@@ -78,7 +78,7 @@
                                 <div class="bg-img">
                                     <img src="./media/imgs/avatar3.png" alt="">
                                 </div>
-                                <div class="userName_story">barked</div>
+                                <div class="userName_story">avatar</div>
                             </a>
                         </div>
                         <div class="story">
@@ -86,7 +86,7 @@
                                 <div class="bg-img">
                                     <img src="./media/imgs/avatar4.png" alt="">
                                 </div>
-                                <div class="userName_story">nathanwpyle</div>
+                                <div class="userName_story">AntonietaMS</div>
                             </a>
                         </div>
                         <div class="story">
@@ -94,7 +94,7 @@
                                 <div class="bg-img">
                                     <img src="./media/imgs/avatar5.png" alt="">
                                 </div>
-                                <div class="userName_story">wawawiwac</div>
+                                <div class="userName_story">dogão</div>
                             </a>
                         </div>
                         <div class="story">
@@ -102,7 +102,7 @@
                                 <div class="bg-img">
                                     <img src="./media/imgs/avatar6.png" alt="">
                                 </div>
-                                <div class="userName_story">respondeai</div>
+                                <div class="userName_story">gatão</div>
                             </a>
                         </div>
                         <div class="story">
@@ -110,7 +110,7 @@
                                 <div class="bg-img">
                                     <img src="./media/imgs/avatar7.png" alt="">
                                 </div>
-                                <div class="userName_story">filomoderna</div>
+                                <div class="userName_story">Rau_fotografias</div>
                             </a>
                         </div>
                         <div class="story">
@@ -118,7 +118,7 @@
                                 <div class="bg-img">
                                     <img src="./media/imgs/avatar8.png" alt="">
                                 </div>
-                                <div class="userName_story">memeriago</div>
+                                <div class="userName_story">Mario Bros</div>
                             </a>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                             <div>
                                 <a href="">
                                     <img src="./media/imgs/avatar2.png" alt="">
-                                    <div class="userName_post">meowed</div>
+                                    <div class="userName_post">dona_Benta</div>
                                 </a>
                             </div>
                             <a href="" class="moreOptions_post">
@@ -149,7 +149,7 @@
 
                         <!-- Image -->
                         <a href="">
-                            <img src="./media/imgs/gato-telefone.png" alt="">
+                            <img src="./media/imgs/praia.png" alt="">
                         </a>
 
                         <!-- Actions buttons -->
@@ -172,31 +172,31 @@
 
                         <!-- Liked by -->
                         <div class="numberOfLikes_post">
-                            <a href=""><img src="./media/imgs/avatar6.png" alt=""></a>
+                            <a href=""><img src="./media/imgs/lateral1.png" alt=""></a>
 
-                            Curtido por<span> &nbsp <a href="">responde ai</a> &nbsp</span> e <span>&nbsp<a
-                                    href="">101.523 pessoas</a>&nbsp</span>
+                            Curtido por<span> &nbsp <a href="">Dustin</a> &nbsp</span> e <span>&nbsp<a
+                                    href="">outras pessoas</a>&nbsp</span>
                         </div>
 
                         <!-- Comments -->
                         <div class="comments-area">
                             <div class="view-all-comments">
-                                <a href="">Ver todos os 645 comentários</a>
+                                <a href="">Ver todos os 32 comentários</a>
                             </div>
                             <div class="comments">
                                 <div class="comment">
                                     <div>
                                         <a href=""> <div class="user-nicknamen">snMarcus</div>
                                         </a>
-                                        Bela imagem!!!
+                                        Nossa, perfeito!!!
                                     </div>
                                     <a href=""><ion-icon name="heart-outline"></ion-icon></a>
                                 </div>
                                 <div class="comment">
                                     <div>
-                                        <a href=""> <div class="user-nicknamen">snMarcus</div>
+                                        <a href=""> <div class="user-nicknamen">Dustin</div>
                                         </a>
-                                        Linda foto. Top demais
+                                        Que praia linda
                                     </div>
                                     <a href=""><ion-icon name="heart-outline"></ion-icon></a>
                                 </div>
@@ -206,7 +206,7 @@
                         </div>
                         <!-- Publication date -->
                         <div class="publication-date">
-                            Há 11 horas
+                            Há 1 hora
                         </div>
                         <!-- Comment input -->
                         <div class="comment-input">
@@ -221,8 +221,8 @@
                         <div class="header_post">
                             <div>
                                 <a href="">
-                                    <img src="./media/imgs/avatar2.png" alt="">
-                                    <div class="userName_post">meowed</div>
+                                    <img src="./media/imgs/avatar0.png" alt="">
+                                    <div class="userName_post">Mike</div>
                                 </a>
                             </div>
                             <a href="" class="moreOptions_post">
@@ -232,7 +232,10 @@
 
                         <!-- Image -->
                         <a href="">
-                            <img src="./media/imgs/gato-telefone.png" alt="">
+                            <video width="320" height="240" autoplay muted>
+                                <source src="./media/videos/video.mp4" type="video/mp4">
+                                <source src="./media/videos/video.ogv" type="video/ogg">
+                              </video>
                         </a>
 
                         <!-- Actions buttons -->
@@ -255,31 +258,31 @@
 
                         <!-- Liked by -->
                         <div class="numberOfLikes_post">
-                            <a href=""><img src="./media/imgs/avatar6.png" alt=""></a>
+                            <a href=""><img src="./media/imgs/lateral2.png" alt=""></a>
 
-                            Curtido por<span> &nbsp <a href="">responde ai</a> &nbsp</span> e <span>&nbsp<a
-                                    href="">101.523 pessoas</a>&nbsp</span>
+                            Curtido por<span> &nbsp <a href="">Will</a> &nbsp</span> e <span>&nbsp<a
+                                    href="">outras pessoas</a>&nbsp</span>
                         </div>
 
                         <!-- Comments -->
                         <div class="comments-area">
                             <div class="view-all-comments">
-                                <a href="">Ver todos os 645 comentários</a>
+                                <a href="">Ver todos os 321 comentários</a>
                             </div>
                             <div class="comments">
                                 <div class="comment">
                                     <div>
-                                        <a href=""> <div class="user-nicknamen">snMarcus</div>
+                                        <a href=""> <div class="user-nicknamen">dona_benta</div>
                                         </a>
-                                        Bela imagem!!!
+                                        Ótima vídeo!!
                                     </div>
                                     <a href=""><ion-icon name="heart-outline"></ion-icon></a>
                                 </div>
                                 <div class="comment">
                                     <div>
-                                        <a href=""> <div class="user-nicknamen">snMarcus</div>
+                                        <a href=""> <div class="user-nicknamen">Mario_Bros</div>
                                         </a>
-                                        Linda foto. Top demais
+                                        Gostei muito desse vídeo
                                     </div>
                                     <a href=""><ion-icon name="heart-outline"></ion-icon></a>
                                 </div>
@@ -289,7 +292,7 @@
                         </div>
                         <!-- Publication date -->
                         <div class="publication-date">
-                            Há 11 horas
+                            Há 2 dias
                         </div>
                         <!-- Comment input -->
                         <div class="comment-input">
@@ -304,8 +307,8 @@
                         <div class="header_post">
                             <div>
                                 <a href="">
-                                    <img src="./media/imgs/avatar2.png" alt="">
-                                    <div class="userName_post">meowed</div>
+                                    <img src="./media/imgs/avatar3.png" alt="">
+                                    <div class="userName_post">avatar</div>
                                 </a>
                             </div>
                             <a href="" class="moreOptions_post">
@@ -315,7 +318,7 @@
 
                         <!-- Image -->
                         <a href="">
-                            <img src="./media/imgs/gato-telefone.png" alt="">
+                            <img src="./media/imgs/praia2.png" alt="">
                         </a>
 
                         <!-- Actions buttons -->
@@ -338,10 +341,10 @@
 
                         <!-- Liked by -->
                         <div class="numberOfLikes_post">
-                            <a href=""><img src="./media/imgs/avatar6.png" alt=""></a>
+                            <a href=""><img src="./media/imgs/lateral4.png" alt=""></a>
 
-                            Curtido por<span> &nbsp <a href="">responde ai</a> &nbsp</span> e <span>&nbsp<a
-                                    href="">101.523 pessoas</a>&nbsp</span>
+                            Curtido por<span> &nbsp <a href="">Billy</a> &nbsp</span> e <span>&nbsp<a
+                                    href="">outras pessoas</a>&nbsp</span>
                         </div>
 
                         <!-- Comments -->
@@ -352,15 +355,15 @@
                             <div class="comments">
                                 <div class="comment">
                                     <div>
-                                        <a href=""> <div class="user-nicknamen">snMarcus</div>
+                                        <a href=""> <div class="user-nicknamen">sn_Marcus</div>
                                         </a>
-                                        Bela imagem!!!
+                                        Bela imagem!!! 
                                     </div>
                                     <a href=""><ion-icon name="heart-outline"></ion-icon></a>
                                 </div>
                                 <div class="comment">
                                     <div>
-                                        <a href=""> <div class="user-nicknamen">snMarcus</div>
+                                        <a href=""> <div class="user-nicknamen">paulo_souza</div>
                                         </a>
                                         Linda foto. Top demais
                                     </div>
@@ -372,7 +375,7 @@
                         </div>
                         <!-- Publication date -->
                         <div class="publication-date">
-                            Há 11 horas
+                            Há 7 horas
                         </div>
                         <!-- Comment input -->
                         <div class="comment-input">
@@ -392,8 +395,8 @@
 
                         <div class="desc-profile">
                             <a href="">
-                                <span>catanacomics</span>
-                                Catana
+                                <span>Shrek</span>
+                                Fiona
                             </a>
                         </div>
                     </div>
@@ -410,9 +413,9 @@
                             <div>
                                 <div class="desc-profile">
                                     <a href="">
-                                        <span>bad.vibes.memes</span>
+                                        <span>Dustin</span>
                                     </a>
-                                    Segue você
+                                    Novo no Instagram
                                 </div>
                                 <a href="">Seguir</a>
                             </div>
@@ -423,7 +426,7 @@
                             <div>
                                 <div class="desc-profile">
                                     <a href="">
-                                        <span>chibirdart</span>
+                                        <span>Will</span>
                                     </a>
                                     Segue você
                                 </div>
@@ -437,9 +440,9 @@
                             <div>
                                 <div class="desc-profile">
                                     <a href="">
-                                        <span>razoesparaacreditar</span>
+                                        <span>Eleven</span>
                                     </a>
-                                    Segue você
+                                    Novo no Instagram
                                 </div>
                                 <a href="">Seguir</a>
                             </div>
@@ -451,7 +454,7 @@
                             <div>
                                 <div class="desc-profile">
                                     <a href="">
-                                        <span>adorable_animals</span>
+                                        <span>Billy</span>
                                     </a>
                                     Segue você
                                 </div>
@@ -465,7 +468,7 @@
                             <div>
                                 <div class="desc-profile">
                                     <a href="">
-                                        <span>smallcutecats</span>
+                                        <span>Mike</span>
                                     </a>
                                     Segue você
                                 </div>
